--- a/src/home.fxml
+++ b/src/home.fxml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="352.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="HomeController">
+   <Label alignment="CENTER" prefHeight="33.0" prefWidth="386.0" text="Guess number from 1 - 20">
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </Label>
+   <Button fx:id="btnPlay" layoutX="118.0" layoutY="236.0" mnemonicParsing="false" onAction="#play" prefHeight="43.0"
+           prefWidth="150.0" text="Guess">
+      <font>
+         <Font size="20.0"/>
+      </font>
+   </Button>
+   <TextField fx:id="tfGuessedNumber" alignment="CENTER" layoutX="100.0" layoutY="146.0"
+              onMouseClicked="#clearStatusLabelOnTextFieldMouseClick" prefHeight="60.0" prefWidth="186.0"
+              promptText="Enter number">
+      <font>
+         <Font size="25.0"/>
+      </font>
+   </TextField>
+   <Label fx:id="lblStatus" alignment="CENTER" layoutY="84.0" prefHeight="18.0" prefWidth="386.0">
+      <font>
+         <Font size="30.0"/>
+      </font>
+   </Label>
+   <Label fx:id="lblScore" layoutX="14.0" layoutY="34.0" text="Score : 0"/>
+   <Button fx:id="btnReset" disable="true" layoutX="117.0" layoutY="286.0" mnemonicParsing="false"
+           onAction="#resetScore" prefHeight="43.0" prefWidth="150.0" text="Reset">
+      <font>
+         <Font size="15.0"/>
+      </font>
+   </Button>
 </AnchorPane>
